--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,4 +1,4 @@
-name: Django CI
+name: Django CI/CD
 
 on:
   push:
@@ -28,3 +28,4 @@ jobs:
     - name: Run Tests
       run: |
         python manage.py test
+        python manage.py runserver
