--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,4 +1,4 @@
-name: Django CI/CD
+name: Django CI
 
 on:
   push:
@@ -28,4 +28,3 @@ jobs:
     - name: Run Tests
       run: |
         python manage.py test
-        python manage.py runserver
